--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/((?!manifest\\.json|favicon\\.ico|logo192\\.png|logo512\\.png).*)",
+      "destination": "/index.html"
+    }
+  ]
+}
